# the-one-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  PROGRESS.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: tool-suggestion.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
benchmarks/: README.md  results.md
config/: redis.conf.example
crates/the-one-claude/: Cargo.toml
crates/the-one-claude/src/: lib.rs
crates/the-one-codex/: Cargo.toml
crates/the-one-codex/src/: lib.rs
crates/the-one-core/: Cargo.toml
crates/the-one-core/examples/: production_hardening_bench.rs
crates/the-one-core/migrations/postgres-state/: 0000_state_migrations_table.sql  0001_state_schema_v7.sql
crates/the-one-core/src/: audit.rs  backup.rs  config.rs  contracts.rs  docs_manager.rs  error.rs  lib.rs  limits.rs  manifests.rs  naming.rs  pagination.rs  policy.rs  profiler.rs  project.rs  state_store.rs  telemetry.rs  tool_catalog.rs  tool_catalog_schema.rs
crates/the-one-core/src/config/: backend_selection.rs
crates/the-one-core/src/storage/: mod.rs  postgres.rs  redis.rs  sqlite.rs
crates/the-one-core/tests/: postgres_state_roundtrip.rs  redis_state_roundtrip.rs
crates/the-one-mcp/: Cargo.toml
crates/the-one-mcp/src/: adapter_core.rs  api.rs  backup.rs  broker.rs  lib.rs  postgres_combined.rs  resources.rs  swagger.rs
crates/the-one-mcp/src/transport/: jsonrpc.rs  mod.rs  sse.rs  stdio.rs  stream.rs  tools.rs
crates/the-one-mcp/tests/: postgres_combined_roundtrip.rs  production_hardening.rs  stdio_write_path.rs
crates/the-one-memory/: Cargo.toml
crates/the-one-memory/examples/: pgvector_bench.rs  retrieval_bench.rs
crates/the-one-memory/migrations/pgvector/: 0000_migrations_table.sql  0001_extension_and_schema.sql  0002_chunks_table.sql  0003_entities_table.sql  0004_relations_table.sql
crates/the-one-memory/src/: chunker.rs  chunker_c.rs  chunker_cpp.rs  chunker_go.rs  chunker_go_ts.rs  chunker_java.rs  chunker_kotlin.rs  chunker_php.rs  chunker_python.rs  chunker_python_ts.rs  chunker_ruby.rs  chunker_rust.rs  chunker_rust_ts.rs  chunker_swift.rs  chunker_ts_impl.rs  chunker_typescript.rs  chunker_typescript_ts.rs  chunker_zig.rs  conversation.rs  embeddings.rs  graph.rs  graph_extractor.rs  image_embeddings.rs  image_ingest.rs  lib.rs  models_registry.rs  ocr.rs  palace.rs  pg_vector.rs  qdrant.rs  redis_vectors.rs  reranker.rs  sparse_embeddings.rs  thumbnail.rs  vector_backend.rs  watcher.rs
crates/the-one-memory/tests/: pgvector_roundtrip.rs
crates/the-one-redis/: Cargo.toml
crates/the-one-redis/src/: error.rs  hashes.rs  keys.rs  lib.rs  lists.rs  pool.rs  pubsub.rs  search.rs  sets.rs  sorted_sets.rs  streams.rs  timeseries.rs
crates/the-one-redis/tests/: blpop_timeout.rs  dedicated_conn_for_blocking_commands.rs  response_timeout_default.rs  sentinel_ops.rs  streams_nil.rs
crates/the-one-registry/: Cargo.toml
crates/the-one-registry/src/: lib.rs
crates/the-one-router/: Cargo.toml
crates/the-one-router/src/: health.rs  lib.rs  provider_pool.rs  providers.rs
crates/the-one-ui/: Cargo.toml
crates/the-one-ui/src/: lib.rs
docs-site/: README.md  index.html  style.css
docs/adr/: 0001-project-isolation-model.md  0002-approval-policy.md  0003-mcp-versioning-policy.md
docs/benchmarks/: conversation-memory-benchmark.md
docs/guides/: api-reference.md  architecture.md  auto-indexing.md  backup-restore.md  code-chunking.md  combined-postgres-backend.md  combined-redis-backend.md  configuration.md  conversation-memory.md  custom-tools.md  embedding-models.md  graph-rag.md  hybrid-search.md  image-search.md  mcp-resources.md  mempalace-operations.md  multi-backend-operations.md  observability.md  pgvector-backend.md  postgres-state-backend.md  production-hardening-v0.15.md  quickstart.md  redis-state-backend.md  redis-vector-backend.md  reranking.md  the-one-mcp-complete-guide.md  the-one-redis-facade.md  tool-catalog.md  troubleshooting.md  upgrade-guide.md
docs/ops/: operator-runbook.md
docs/plans/: 2026-04-03-production-overhaul-plan.md  2026-04-03-tool-catalog-integration-plan.md  2026-04-10-audit-batching-lever2.md  2026-04-11-multi-backend-architecture.md  2026-04-11-next-steps-expansion.md  2026-04-11-resume-phase1-onwards.md  2026-04-11-resume-phase2-prompt.md  2026-04-11-resume-phase4-prompt.md  2026-05-16-fred-removal-and-bug-fixes.md  draft-2026-04-10-audit-batching-lever2.md  the-one-mcp-architecture-prompt.md  the-one-mcp-implementation-plan.md  the-one-mcp-sprint-plan.md  tool-ecosystem-architecture.md
docs/plans/historical/: 2026-04-11-resume-phase1-onwards.md
docs/releases/: v1beta-upgrade-notes.md
docs/reviews/: 2026-04-03-deep-dive-code-review.md  2026-04-09-production-hardening-findings.md  2026-04-10-feature-update-report.md  2026-04-10-mempalace-comparative-audit.md  2026-04-10-production-hardening-verification.md
docs/specs/: 2026-04-03-production-overhaul-design.md  2026-04-03-tool-catalog-integration-design.md
docs/superpowers/plans/: 2026-04-04-embedding-model-registry.md  2026-04-05-SESSION-HANDOFF.md  2026-04-05-mcp-tool-consolidation.md  2026-04-05-multimodal-image-support.md  2026-04-05-phase1-quality-credibility.md  2026-04-05-phase2-reach-growth.md  2026-04-05-phase3-polish.md  2026-04-09-mempalace-integration-plan.md  2026-04-09-production-hardening-plan.md  2026-04-10-mempalace-phase2-production-plan.md
docs/superpowers/specs/: 2026-04-04-embedding-model-registry-design.md  2026-04-05-mcp-tool-consolidation-design.md  2026-04-05-multimodal-image-support-design.md  2026-04-05-v070-hybrid-search-watcher-design.md  2026-04-05-v080-auto-reindex-code-chunker-design.md
models/: api-models.toml  image-models.toml  local-models.toml  rerank-models.toml
pages/: index.html
schemas/mcp/v1beta/: audit.events.request.schema.json  audit.events.response.schema.json  (+77 more)
scripts/: build.sh  install.sh  release-gate.sh  update-api-models.sh  update-local-models.sh
tools/: recommended.json
tools/catalog/: _changelog.json  _index.json  _schema.json
(+19 files in other folders)
