[workspace]
members = [
    "crates/the-one-claude",
    "crates/the-one-codex",
    "crates/the-one-core",
    "crates/the-one-mcp",
    "crates/the-one-memory",
    "crates/the-one-registry",
    "crates/the-one-router",
    "crates/the-one-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://example.invalid/the-one-mcp"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "io-util", "io-std", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fastembed = { version = "5.13", default-features = false }
async-trait = "0.1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tesseract = "0.15"
notify = "6.1"
notify-debouncer-mini = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }
# Tree-sitter parsing infrastructure for code-aware chunking (Task 1.2 / v0.9.0).
# Each language grammar is a separate crate pulled in via features on the
# `the-one-memory` crate so lean builds can opt out.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-zig = "1.1"
tree-sitter-php = "0.24"
