[workspace]
members = [
    "crates/the-one-claude",
    "crates/the-one-codex",
    "crates/the-one-core",
    "crates/the-one-mcp",
    "crates/the-one-memory",
    "crates/the-one-registry",
    "crates/the-one-router",
    "crates/the-one-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://example.invalid/the-one-mcp"
# Real release version — surfaced by `the-one-mcp --version` (clap reads
# CARGO_PKG_VERSION) and by the MCP `serverInfo.version` field. Align
# with the top of CHANGELOG.md and the VERSION file on every release.
version = "0.16.1"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "io-util", "io-std", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
fastembed = { version = "5.13", default-features = false }
async-trait = "0.1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tesseract = "0.15"
notify = "6.1"
notify-debouncer-mini = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }
fred = { version = "10", features = ["subscriber-client", "i-redisearch", "i-streams"] }
# Tree-sitter parsing infrastructure for code-aware chunking (Task 1.2 / v0.9.0).
# Each language grammar is a separate crate pulled in via features on the
# `the-one-memory` crate so lean builds can opt out.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-zig = "1.1"
tree-sitter-php = "0.24"
# v0.16.0 Phase 2 — pgvector backend deps are declared directly in
# `crates/the-one-memory/Cargo.toml` under the `pg-vectors` optional
# feature, NOT via [workspace.dependencies]. Reason: cargo's links-
# conflict check evaluates workspace deps eagerly, and sqlx-sqlite
# (sqlx's optional sqlite driver) links `libsqlite3-sys ^0.30.1`
# while this workspace already links `libsqlite3-sys ^0.37.0` via
# rusqlite 0.39. Inlining the sqlx spec inside `optional = true`
# lets cargo's resolver skip sqlx-sqlite entirely when pg-vectors
# is not the active build. See the `pg-vectors` feature in
# `crates/the-one-memory/Cargo.toml` for the version + feature set.
