[package]
name = "the-one-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.27"
