[package]
name = "the-one-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["embed-swagger", "local-embeddings"]
embed-swagger = []
local-embeddings = ["the-one-memory/local-embeddings"]
# v0.11.0: dynamic-loaded ONNX Runtime for platforms without prebuilt
# libraries (notably Intel Mac). Use INSTEAD of local-embeddings when
# building for x86_64-apple-darwin.
local-embeddings-dynamic = ["the-one-memory/local-embeddings-dynamic"]
image-embeddings = ["the-one-memory/image-embeddings", "dep:image"]
image-ocr = ["the-one-memory/image-ocr"]
redis-vectors = ["the-one-memory/redis-vectors", "local-embeddings"]
# v0.16.0 Phase 2 — pgvector backend. Passthrough to the-one-memory's
# `pg-vectors` feature. Off by default; operators opt in via
# `cargo build --features pg-vectors` when building the binary. The
# compile gate on `PgVectorBackend` uses `#[cfg(feature = "pg-vectors")]`
# in `the-one-memory` so the broker's factory branch degrades to a
# clean `InvalidProjectConfig` error when the feature is off.
pg-vectors = ["the-one-memory/pg-vectors"]

[[bin]]
name = "the-one-mcp"
path = "src/bin/the-one-mcp.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
base64 = "0.22"
clap.workspace = true
image = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
tempfile = "3.27"
the-one-core = { path = "../the-one-core" }
the-one-memory = { path = "../the-one-memory", default-features = false }
the-one-registry = { path = "../the-one-registry" }
the-one-router = { path = "../the-one-router" }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tracing.workspace = true
# v0.12.0: backup / restore support via `maintain: backup` and `maintain: restore`
tar = "0.4"
flate2 = "1"

[dev-dependencies]
