[package]
name = "the-one-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-embeddings", "image-embeddings"]
local-embeddings = ["dep:fastembed"]
image-embeddings = ["local-embeddings", "dep:image"]
image-ocr = ["image-embeddings", "dep:tesseract"]

[dependencies]
async-trait.workspace = true
fastembed = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.11"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = { workspace = true }
image = { workspace = true, optional = true }
tesseract = { workspace = true, optional = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.27"
