[package]
name = "the-one-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-embeddings", "image-embeddings", "tree-sitter-chunker"]
# Default local embeddings: pulls in fastembed with its `ort-download-binaries`
# backend, which downloads prebuilt ONNX Runtime C++ libraries at build time.
# This works on Linux x86_64/aarch64, macOS arm64, and Windows, but does NOT
# support Intel Mac (x86_64-apple-darwin) as of ort-sys 2.0.0-rc.11.
local-embeddings = [
    "dep:fastembed",
    "fastembed?/ort-download-binaries-native-tls",
    "fastembed?/hf-hub-native-tls",
    "fastembed?/image-models",
]

# Intel Mac / dynamic-load alternative (v0.11.0): use fastembed's
# `ort-load-dynamic` feature so the ONNX Runtime library is resolved at
# runtime from a system-installed libonnxruntime. Intel Mac users can get
# this via `brew install onnxruntime`. Linux users via their distro's
# package. Downstream crates should enable EITHER `local-embeddings`
# (build-time bundled ort) OR `local-embeddings-dynamic` (runtime-loaded
# ort), not both.
local-embeddings-dynamic = [
    "dep:fastembed",
    "fastembed?/ort-load-dynamic",
    "fastembed?/hf-hub-native-tls",
    "fastembed?/image-models",
]

image-embeddings = ["local-embeddings", "dep:image"]
image-ocr = ["image-embeddings", "dep:tesseract"]
redis-vectors = ["dep:fred"]

# Tree-sitter code-aware chunker. Enables AST-based chunking for 13
# programming languages. Adds ~3-5MB to the binary (per-language ~100-400KB
# compiled C grammar + bindings). Disable for lean builds via
# `--no-default-features`.
tree-sitter-chunker = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-swift",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-java",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-zig",
    "dep:tree-sitter-php",
]

[dependencies]
async-trait.workspace = true
regex = "1"
fastembed = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.11"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = { workspace = true }
fred = { workspace = true, optional = true }
image = { workspace = true, optional = true }
tesseract = { workspace = true, optional = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.27"
