[package]
name = "the-one-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-embeddings", "image-embeddings", "tree-sitter-chunker"]
# Default local embeddings: pulls in fastembed with its `ort-download-binaries`
# backend, which downloads prebuilt ONNX Runtime C++ libraries at build time.
# This works on Linux x86_64/aarch64, macOS arm64, and Windows, but does NOT
# support Intel Mac (x86_64-apple-darwin) as of ort-sys 2.0.0-rc.11.
local-embeddings = [
    "dep:fastembed",
    "fastembed?/ort-download-binaries-native-tls",
    "fastembed?/hf-hub-native-tls",
    "fastembed?/image-models",
]

# Intel Mac / dynamic-load alternative (v0.11.0): use fastembed's
# `ort-load-dynamic` feature so the ONNX Runtime library is resolved at
# runtime from a system-installed libonnxruntime. Intel Mac users can get
# this via `brew install onnxruntime`. Linux users via their distro's
# package. Downstream crates should enable EITHER `local-embeddings`
# (build-time bundled ort) OR `local-embeddings-dynamic` (runtime-loaded
# ort), not both.
local-embeddings-dynamic = [
    "dep:fastembed",
    "fastembed?/ort-load-dynamic",
    "fastembed?/hf-hub-native-tls",
    "fastembed?/image-models",
]

image-embeddings = ["local-embeddings", "dep:image"]
image-ocr = ["image-embeddings", "dep:tesseract"]
redis-vectors = ["dep:fred"]

# v0.16.0 Phase 2 — pgvector backend. Off by default; operators opt in via
# `cargo build --features pg-vectors` (or by enabling it on the binary
# crate). Pulls in sqlx (Postgres driver) and the `pgvector` crate for
# `Vec<f32>` ↔ pgvector round-trip.
#
# ## Why the sqlx feature set is minimal
#
# Decision B in the Phase 2 plan originally specified the features list
# `[runtime-tokio, tls-rustls, postgres, macros, migrate, chrono]`. The
# `migrate` and `chrono` features were dropped after `cargo check`
# bisection proved that both transitively evaluate `sqlx-sqlite?/xxx`
# weak-dep references, which cargo's `links` conflict check treats as
# "possibly activates" and pulls `sqlx-sqlite` into the resolution
# graph. `sqlx-sqlite 0.8.x` requires `libsqlite3-sys ^0.30.1`, which
# is disjoint from `rusqlite 0.39`'s `libsqlite3-sys ^0.37.0` required
# by `the-one-core`. Result: every build of the workspace with these
# two sqlx features enabled fails before any Rust code compiles.
#
# Replacements:
#   - `migrate` → hand-rolled migration runner in `pg_vector::migrations`.
#     Reads `include_str!()`'d SQL files, tracks applied versions in
#     the `the_one.pgvector_migrations` table, applies missing
#     migrations in order. ~80 LOC, covered in `pg_vector.rs` tests.
#   - `chrono`  → removed from the roadmap entirely. Every backend
#     in this workspace stores timestamps as `BIGINT epoch_ms`,
#     which sqlx handles natively without the feature. The cargo
#     `links` conflict with rusqlite 0.39 is permanent and not
#     worth revisiting — future phases (PostgresStateStore, etc.)
#     use the same epoch_ms convention.
pg-vectors = ["dep:sqlx", "dep:pgvector"]

# Tree-sitter code-aware chunker. Enables AST-based chunking for 13
# programming languages. Adds ~3-5MB to the binary (per-language ~100-400KB
# compiled C grammar + bindings). Disable for lean builds via
# `--no-default-features`.
tree-sitter-chunker = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-swift",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-java",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-zig",
    "dep:tree-sitter-php",
]

[dependencies]
async-trait.workspace = true
regex = "1"
fastembed = { workspace = true, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.11"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml = { workspace = true }
fred = { workspace = true, optional = true }
image = { workspace = true, optional = true }
tesseract = { workspace = true, optional = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = { workspace = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
# v0.16.0 Phase 2 — pgvector VectorBackend. Optional, gated on
# the `pg-vectors` feature.
#
# Declared directly (not via [workspace.dependencies]) because the
# `migrate` and `chrono` features were dropped from Decision B after
# bisection proved they both transitively reference `sqlx-sqlite?/…`
# which cargo's `links` conflict check pulls into the graph even with
# `optional = true`. See the `pg-vectors` feature comment above for
# the full explanation and the hand-rolled replacements.
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
], optional = true }
pgvector = { version = "0.4", default-features = false, features = ["sqlx"], optional = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.27"
