[package]
name = "the-one-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
the-one-core = { path = "../the-one-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
