[package]
name = "the-one-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
the-one-core = { path = "../the-one-core" }
the-one-mcp = { path = "../the-one-mcp" }
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "signal", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
