[package]
name = "the-one-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["embed-swagger", "local-embeddings"]
embed-swagger = ["the-one-mcp/embed-swagger"]
local-embeddings = ["the-one-mcp/local-embeddings"]
# v0.11.0: runtime-loaded ONNX Runtime alternative for Intel Mac + other
# platforms lacking prebuilt ort binaries. Use instead of local-embeddings.
local-embeddings-dynamic = ["the-one-mcp/local-embeddings-dynamic"]
image-embeddings = ["the-one-mcp/image-embeddings"]

[dependencies]
axum = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
the-one-core = { path = "../the-one-core" }
the-one-mcp = { path = "../the-one-mcp", default-features = false }
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "signal", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
